<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc4"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.pratik.kirana.CustomerLoginForm"
    tools:showIn="@layout/activity_customer_login_form">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textViewCustomerLoginHeading"
        style="@style/textViewLoginPages"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/textViewLoginPageHeading" />

    <EditText
        android:id="@+id/editTextUsernameCustomer"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_below="@id/textViewCustomerLoginHeading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/hintUsernameRetailer"
        android:inputType="textEmailAddress"
        android:textColorHint="#330019" />

    <EditText
        android:id="@+id/editTextPasswordCustomer"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_below="@id/editTextUsernameCustomer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/hintPasswordRetailer"
        android:inputType="textPassword"
        android:textColorHint="#330019" />

    <Button
        android:id="@+id/buttonLoginCustomer"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_below="@id/editTextPasswordCustomer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:text="@string/buttonLoginRetailer"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textViewNewToKirana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLoginCustomer"
        android:layout_alignLeft="@id/editTextUsernameCustomer"
        android:layout_alignStart="@id/editTextUsernameCustomer"
        android:layout_marginTop="10dp"
        android:text="@string/textViewNewToKirana"
        android:textColor="#330019"
        android:textSize="17sp" />

    <ImageView
        android:id="@+id/imageViewOnLoginPageCustomer"
        android:contentDescription="@string/imageViewOnLoginPageCustomer"
        android:layout_width="280dp"
        android:layout_height="160dp"
        android:background="@drawable/i16"
        android:layout_marginBottom="75dp"
        android:layout_below="@id/textViewNewToKirana"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewSignUpCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLoginCustomer"
        android:layout_alignRight="@id/editTextUsernameCustomer"
        android:layout_alignEnd="@id/editTextUsernameCustomer"
        android:layout_marginTop="10dp"
        android:text="@string/textViewSignUpRetailer"
        android:textColor="#330019"
        android:textSize="17sp" />
</RelativeLayout>
</ScrollView>
